kubernetes/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent@sha256:352371a7242e8b4aa10958ca02076d1023758070519b89a10251475fb9f1a35a
          ports:
            - { name: http, containerPort: 8080 }
            - { name: bt-tcp, containerPort: 6881, protocol: TCP }
            - { name: bt-udp, containerPort: 6881, protocol: UDP }
          volumeMounts:
            - { name: config, mountPath: /config }
            - { name: media, mountPath: /data }
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits: { memory: 512Mi }
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: media
          hostPath: { path: /mnt/media, type: Directory }
        - name: share-limits
          configMap:
            name: qbittorrent-config
